exports[`CartContainer > Class Methods changeFund handles deselecting a fund 1`] = `
Object {
  "subfunds": Array [
    Object {
      "accounts": Array [
        Object {
          "label": "TEST 1",
          "value": 1,
        },
        Object {
          "label": "TEST 2",
          "value": 2,
        },
        Object {
          "label": "TEST 3",
          "value": 3,
        },
        Object {
          "label": "TEST 4",
          "value": 4,
        },
      ],
      "amount": null,
      "fundId": undefined,
      "id": 1,
      "primary": true,
    },
    Object {
      "accounts": Array [
        Object {
          "label": "TEST 1",
          "value": 1,
        },
        Object {
          "label": "TEST 2",
          "value": 2,
        },
        Object {
          "label": "TEST 3",
          "value": 3,
        },
        Object {
          "label": "TEST 4",
          "value": 4,
        },
      ],
      "amount": null,
      "fundId": undefined,
      "id": 2,
      "primary": false,
    },
  ],
}
`;

exports[`CartContainer > Class Methods changeFund handles deselecting a fund with an amount 1`] = `
Object {
  "subfunds": Array [
    Object {
      "accounts": Array [
        Object {
          "label": "TEST 1",
          "value": 1,
        },
        Object {
          "label": "TEST 2",
          "value": 2,
        },
        Object {
          "label": "TEST 3",
          "value": 3,
        },
        Object {
          "label": "TEST 4",
          "value": 4,
        },
      ],
      "amount": 10,
      "fundId": 2,
      "id": 1,
      "primary": true,
    },
    Object {
      "accounts": Array [
        Object {
          "label": "TEST 3",
          "value": 3,
        },
        Object {
          "label": "TEST 4",
          "value": 4,
        },
      ],
      "amount": null,
      "fundId": undefined,
      "id": 2,
      "primary": false,
    },
  ],
}
`;

exports[`CartContainer > Class Methods changeFund update the state correctly 1`] = `
Object {
  "subfunds": Array [
    Object {
      "accounts": Array [
        Object {
          "label": "TEST 1",
          "value": 1,
        },
        Object {
          "label": "TEST 2",
          "value": 2,
        },
        Object {
          "label": "TEST 3",
          "value": 3,
        },
        Object {
          "label": "TEST 4",
          "value": 4,
        },
      ],
      "amount": null,
      "fundId": 2,
      "id": 1,
      "primary": true,
    },
    Object {
      "accounts": Array [
        Object {
          "label": "TEST 1",
          "value": 1,
        },
        Object {
          "label": "TEST 3",
          "value": 3,
        },
        Object {
          "label": "TEST 4",
          "value": 4,
        },
      ],
      "amount": null,
      "fundId": undefined,
      "id": 2,
      "primary": false,
    },
  ],
}
`;

exports[`CartContainer > Lifecycle functions accepts query string prefills the fund 1`] = `
<CartContainer
  accounts={
    Array [
      Object {
        "id": "1",
        "name": "test",
      },
    ]
  }
  addTransactions={[Function]}
  clearTransaction={[Function]}
  clearTransactions={[Function]}
  give="5"
  query={Object {}}>
  <Component
    changeAmount={[Function]}
    changeFund={[Function]}
    preFill={[Function]}
    subfunds={
      Array [
        Object {
          "accounts": Array [
            Object {
              "label": "test",
              "value": "1",
            },
          ],
          "amount": 10,
          "fundId": "1",
          "id": 1,
          "primary": true,
        },
      ]
    }
    total={10}>
    <div
      className="push-top@handheld soft-half-top@lap-and-up">
      <Form
        classes={
          Array [
            "text-left",
            "hard",
          ]
        }
        id="add-to-cart"
        submit={[Function]}>
        <form
          className="hard-ends text-left hard"
          id="add-to-cart"
          onSubmit={[Function]}>
          <FieldSet>
            <fieldset
              className="flush-bottom">
              <div
                className="display-inline-block">
                <mockConstructor
                  accounts={
                    Array [
                      Object {
                        "label": "test",
                        "value": "1",
                      },
                    ]
                  }
                  amount={10}
                  changeAmount={[Function]}
                  changeFund={[Function]}
                  fundId="1"
                  id={1}
                  preFill={[Function]}
                  primary={true}>
                  <div />
                </mockConstructor>
                <h3
                  className="display-inline-block text-dark-tertiary push-half-bottom push-half-right">
                  so my total is
                </h3>
                <h3
                  className="display-inline-block text-brand push-half-bottom">
                  $10.00
                </h3>
              </div>
              <div
                className="push-top">
                <mockConstructor
                  disabled={false}>
                  <div />
                </mockConstructor>
              </div>
            </fieldset>
          </FieldSet>
        </form>
      </Form>
    </div>
  </Component>
</CartContainer>
`;

exports[`CartContainer > Lifecycle functions calls clearTransactions 1`] = `
Object {
  "subfunds": Array [
    Object {
      "accounts": Array [
        Object {
          "label": "test",
          "value": "1",
        },
      ],
      "amount": null,
      "fundId": "1",
      "id": 1,
      "primary": true,
    },
  ],
}
`;

exports[`CartContainer > Lifecycle functions should clear transactions on success 1`] = `
Object {
  "subfunds": Array [
    Object {
      "accounts": Array [
        Object {
          "label": "test",
          "value": "1",
        },
      ],
      "amount": null,
      "fundId": "1",
      "id": 1,
      "primary": true,
    },
  ],
}
`;

exports[`test should not render if no accounts 1`] = `
<CartContainer
  accounts={Array []}
  addTransactions={[Function]}
  clearTransaction={[Function]}
  clearTransactions={[Function]}
  give="5"
  query={Object {}} />
`;

exports[`test should properly render with multiple accounts 1`] = `
<CartContainer
  accounts={
    Array [
      Object {
        "id": 1,
        "name": "TEST 1",
      },
      Object {
        "id": 2,
        "name": "TEST 2",
      },
      Object {
        "id": 3,
        "name": "TEST 3",
      },
      Object {
        "id": 4,
        "name": "TEST 4",
      },
    ]
  }
  addTransactions={[Function]}
  clearTransaction={[Function]}
  clearTransactions={[Function]}
  give="5"
  query={Object {}}>
  <Component
    changeAmount={[Function]}
    changeFund={[Function]}
    preFill={[Function]}
    subfunds={
      Array [
        Object {
          "accounts": Array [
            Object {
              "label": "TEST 1",
              "value": 1,
            },
            Object {
              "label": "TEST 2",
              "value": 2,
            },
            Object {
              "label": "TEST 3",
              "value": 3,
            },
            Object {
              "label": "TEST 4",
              "value": 4,
            },
          ],
          "amount": null,
          "fundId": 1,
          "id": 1,
          "primary": true,
        },
        Object {
          "accounts": Array [
            Object {
              "label": "TEST 2",
              "value": 2,
            },
            Object {
              "label": "TEST 3",
              "value": 3,
            },
            Object {
              "label": "TEST 4",
              "value": 4,
            },
          ],
          "amount": null,
          "fundId": undefined,
          "id": 2,
          "primary": false,
        },
      ]
    }
    total={0}>
    <div
      className="push-top@handheld soft-half-top@lap-and-up">
      <Form
        classes={
          Array [
            "text-left",
            "hard",
          ]
        }
        id="add-to-cart"
        submit={[Function]}>
        <form
          className="hard-ends text-left hard"
          id="add-to-cart"
          onSubmit={[Function]}>
          <FieldSet>
            <fieldset
              className="flush-bottom">
              <div
                className="display-inline-block">
                <mockConstructor
                  accounts={
                    Array [
                      Object {
                        "label": "TEST 1",
                        "value": 1,
                      },
                      Object {
                        "label": "TEST 2",
                        "value": 2,
                      },
                      Object {
                        "label": "TEST 3",
                        "value": 3,
                      },
                      Object {
                        "label": "TEST 4",
                        "value": 4,
                      },
                    ]
                  }
                  amount={null}
                  changeAmount={[Function]}
                  changeFund={[Function]}
                  fundId={1}
                  id={1}
                  preFill={[Function]}
                  primary={true}>
                  <div />
                </mockConstructor>
                <mockConstructor
                  accounts={
                    Array [
                      Object {
                        "label": "TEST 2",
                        "value": 2,
                      },
                      Object {
                        "label": "TEST 3",
                        "value": 3,
                      },
                      Object {
                        "label": "TEST 4",
                        "value": 4,
                      },
                    ]
                  }
                  amount={null}
                  changeAmount={[Function]}
                  changeFund={[Function]}
                  id={2}
                  preFill={[Function]}
                  primary={false}>
                  <div />
                </mockConstructor>
                <h3
                  className="display-inline-block text-dark-tertiary push-half-bottom push-half-right">
                  so my total is
                </h3>
                <h3
                  className="display-inline-block text-brand push-half-bottom">
                  $0.00
                </h3>
              </div>
              <div
                className="push-top">
                <mockConstructor
                  disabled={true}>
                  <div />
                </mockConstructor>
              </div>
            </fieldset>
          </FieldSet>
        </form>
      </Form>
    </div>
  </Component>
</CartContainer>
`;

exports[`test should render with minimal props 1`] = `
<Component
  changeAmount={[Function]}
  changeFund={[Function]}
  preFill={[Function]}
  subfunds={
    Array [
      Object {
        "accounts": Array [
          Object {
            "label": "test",
            "value": "1",
          },
        ],
        "amount": null,
        "fundId": "1",
        "id": 1,
        "primary": true,
      },
    ]
  }
  total={0} />
`;
